styles/help.css
.headline--help {
    padding: 206px 64px 48px 108px;
    justify-content: space-between;
}

.headline__logo {
    position: fixed;
    top: 225px;
    right: max(calc((100vw - 1440px) + 96px), 96px);
    width: 37px;
    height: 37px;
    padding: 0;
    border: none;
    background: transparent;
    border-radius: 50%;
    transition: all 100ms;
}

.headline__logo .page-back-btn__icon {
    width: 37px;
    height: 37px;
}

.headline__logo:hover {
    background-color: #d1d1d1;
    scale: 1.1;
    cursor: pointer;
}

.textcontent {
    padding: 0 64px 0 108px;
    display: flex;
    flex-direction: column;
    gap: 24px;
}

.help__text--secondary {
    color: #29abe2;
}

.help__subheading {
    font-size: 27px;
    font-weight: 700;
}

.help__howToUse {
    display: flex;
    flex-direction: column;
    gap: 16px;
}

.help__howToUse--list {
    display: flex;
    gap: 35px;
}

.help__subheading--bulletpoint {
    font-size: 20px;
    font-weight: 700;
}

.help__howToUse--gap {
    display: flex;
    flex-direction: column;
    gap: 16px;
}

.help__subheading--conclusion {
    padding: 16px 0 32px;
}

@media (max-width: 1080px) {
    .headline--help {
        padding: 144px 40px 48px;
    }

    .textcontent {
        padding: 0 40px 104px;
    }

    .headline__logo {
        top: 168px;
        right: 40px;
    }
}

@media (max-width: 620px) {
    .headline--help {
        padding: 144px 16px 48px;
    }

    .headline__name {
        font-size: 47px;
    }

    .textcontent {
        padding: 0 16px 104px;
    }

    .headline__logo {
        top: 168px;
        right: 16px;
    }

    .help__howToUse--list {
        gap: 16px;
    }
}

